test/fail/invaliddim.min
program
    array x[0]
start
end
